package org.example.web.reponse;

import lombok.*;
import org.example.data.entity.Phone;
import org.example.data.mappers.PhoneMapper;

import java.util.List;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
public class LoginResponse {

    private String id;
    private String created;
    private String lastLogin;
    private String token;
    private boolean isActive;
    private String name;
    private String email;
    private String password;
    private List<PhoneMapper> phones;

}
